# triad-counter-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: triad_bench.rs
example/: network.csv
src/: lib.rs  main.rs
