[package]
name = "triad-counter-rs"
version = "1.0.0"
edition = "2021"
authors = ["Joseph Quinn <quinn.josephr@protonmail.com>"]
description = "Rust implementation of the TriadCounter plugin for PluMA - Network triad analysis"
license = "MIT"
repository = "https://github.com/quinnjr/triad-counter-rs"
keywords = ["bioinformatics", "network-analysis", "graph", "triads", "pluma"]
categories = ["science", "algorithms"]

[lib]
name = "triad_counter_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "triad-counter"
path = "src/main.rs"

[dependencies]
csv = "1.3"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.8.0"

[[bench]]
name = "triad_bench"
harness = false
